docs: add troubleshooting section to README
Signed-off-by: yardencuriel <splint_disk.8i@icloud.com>